src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Client_Form_Type__c</fullName>
        <label>Client Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Form_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITA_Product_Code__c</fullName>
        <formula>Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITA Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <description>Helps distinguish between Services that are being sold versus add-ons.</description>
        <formula>Product2.IsPrimary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>